Added effective inflation rate

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -599,3 +599,24 @@ month={9},
   year={2022},
   url={https://www.coindesk.com/markets/2020/07/08/circle-confirms-freezing-100k-in-usdc-at-law-enforcements-request/},
 }
+
+@misc{ethereum2023-2,
+  author={Ethereum},
+  title={{How The Merge impacted ETH supply | ethereum.org}},
+  url={https://ethereum.org/en/roadmap/merge/issuance/},
+}
+
+@misc{ultrasoundmoney2023,
+  title={{Ultra Sound money}},
+  url={https://ultrasound.money/},
+}
+
+@misc{beaconchain2023,
+  title={{Open Source Ethereum Blockchain Explorer - Beaconcha.in - 2023}},
+  url={https://beaconcha.in/},
+}
+
+@misc{etherscan2023,
+  title={{Ether Supply Growth Chart}},
+  url={https://etherscan.io/chart/ethersupplygrowth},
+}
