Updated to final version

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -620,3 +620,28 @@ month={9},
   title={{Ether Supply Growth Chart}},
   url={https://etherscan.io/chart/ethersupplygrowth},
 }
+
+@article{monnot2023,
+  author={Monnot, Barnabé},
+  month={4},
+  title={{Seeing like a protocol}},
+  year={2023},
+  url={https://barnabe.substack.com/p/seeing-like-a-protocol},
+}
+
+@article{oecd2021,
+  author={OECD},
+  journal={OECD Competition Committee Issues},
+  month={6},
+  title={{Methodologies to measure market competition}},
+  year={2021},
+  url={https://www.oecd.org/daf/competition/methodologies-to-measure-market-competition.htm},
+}
+
+@misc{brown2023,
+  author={Simon Brown},
+  month={7},
+  title={{Simon Brown - Presentation @ PBS Salon :: ETHCC 2023}},
+  year={2023},
+  url={https://www.youtube.com/watch?v=FUzcN3Mp-6E},
+}
